Fix missing clippy/rustfmt

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,6 +35,7 @@ jobs:
         profile: minimal
         toolchain: ${{ matrix.rust }}
         override: true
+        components: clippy,rustfmt
         
     - name: Cache Dependencies
       uses: Swatinem/rust-cache@v1
