--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,6 +14,8 @@ env:
   CARGO_PROFILE_TEST_DEBUG: 0
   CARGO_PROFILE_BENCH_DEBUG: 0
   CI: 1
+  CARGO_MAKE_RUN_CHECK_FORMAT: 1
+  CARGO_MAKE_RUN_CLIPPY: 1
 
 jobs:
   rust:
