--- a/Makefile.toml
+++ b/Makefile.toml
@@ -25,3 +25,22 @@ condition = { env_set = ["CARGO_MAKE_RUN_CLIPPY"] }
 # Let format check run on non-nightly CI
 [tasks.check-format-ci-flow]
 condition = { env_set = ["CARGO_MAKE_RUN_CHECK_FORMAT"] }
+
+# Run doc lints
+[tasks.check-docs]
+description = "Checks docs for errors."
+category = "Documentation"
+install_crate = false
+env = { RUSTDOCFLAGS = "-D warnings" }
+command = "cargo"
+args = [
+    "doc",
+    "--workspace",
+    "--no-deps",
+    "@@remove-empty(CARGO_MAKE_CARGO_VERBOSE_FLAGS)",
+    "${CARGO_MAKE_CARGO_ALL_FEATURES}",
+]
+
+# Add doc lints to CI flow
+[tasks.post-ci-flow]
+run_task = "check-docs"
