--- a/.editorconfig
+++ b/.editorconfig
@@ -15,3 +15,6 @@ insert_final_newline = true
 # double whitespace at end of line
 # denotes a line break in Markdown
 trim_trailing_whitespace = false
+
+[*.yml]
+indent_size = 2
