Update CI actions and and miri

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,14 +30,12 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       
     - name: Install Rust toolchain
-      uses: actions-rs/toolchain@v1
+      uses: dtolnay/rust-toolchain@master
       with:
-        profile: minimal
         toolchain: ${{ matrix.rust }}
-        override: true
         components: clippy,rustfmt
         
     - name: Cache Dependencies
@@ -46,8 +44,18 @@ jobs:
     - name: Install Cargo Make
       uses: davidB/rust-cargo-make@v1
         
-    - name: cargo-make ci-flow
-      uses: actions-rs/cargo@v1
-      with:
-        command: make
-        args: ci-flow
+    - run: cargo make ci-flow
+  miri:
+    name: Miri
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nightly
+          components: miri
+      - run: cargo miri test
+        env:
+          MIRIFLAGS: -Zmiri-strict-provenance
